force-app/main/default/objects/SBQQ__DiscountTier__c/fields/Max_Tier_Count__c.field-meta.xml
<CustomField>
        <fullName>Max_Tier_Count__c</fullName>
        <formula>SBQQ__Schedule__r.Max_Tier_Count__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Max Tier Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </CustomField>