force-app/main/default/objects/SBQQ__DiscountTier__c/fields/Per_Unit_Price__c.field-meta.xml
<CustomField>
        <fullName>Per_Unit_Price__c</fullName>
        <formula>SBQQ__Schedule__r.List_Price__c - (SBQQ__Schedule__r.List_Price__c *  SBQQ__Discount__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Per Unit Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </CustomField>