force-app/main/default/objects/SBQQ__DiscountTier__c/fields/Price_Glossary_ID__c.field-meta.xml
<CustomField>
        <fullName>Price_Glossary_ID__c</fullName>
        <externalId>true</externalId>
        <label>Price Glossary ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </CustomField>