force-app/main/default/objects/SBQQ__DiscountTier__c/fields/Price_Record_External_ID__c.field-meta.xml
<CustomField>
    <fullName>Price_Record_External_ID__c</fullName>
    <description>This is a unique Price Record External ID.</description>
    <externalId>true</externalId>
    <inlineHelpText>This is a unique Price Record External ID.</inlineHelpText>
    <label>Price Record External ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>