force-app/main/default/objects/SBQQ__DiscountTier__c/fields/SBQQ__Discount__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__Discount__c</fullName>
        <description>Discount percentage applied when quantity falls in this tier.</description>
        <inlineHelpText>Discount percentage applied when quantity falls in this tier.</inlineHelpText>
        <label>Discount (%)</label>
        <precision>14</precision>
        <scale>10</scale>
        <type>Percent</type>
    </CustomField>