force-app/main/default/objects/SBQQ__DiscountTier__c/fields/SBQQ__Number__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__Number__c</fullName>
        <description>Number indicating this tier&apos;s position within the schedule.</description>
        <inlineHelpText>Number indicating this tier&apos;s position within the schedule.</inlineHelpText>
        <label>Number</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </CustomField>