force-app/main/default/objects/SBQQ__DiscountTier__c/fields/SBQQ__Schedule__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__Schedule__c</fullName>
        <description>Discount Schedule to which this tier belongs.</description>
        <inlineHelpText>Discount Schedule to which this tier belongs.</inlineHelpText>
        <label>Schedule</label>
        <referenceTo>SBQQ__DiscountSchedule__c</referenceTo>
        <relationshipLabel>Discount Tiers</relationshipLabel>
        <relationshipName>DiscountTiers</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </CustomField>