force-app/main/default/objects/SBQQ__DiscountTier__c/fields/SortConcat__c.field-meta.xml
<CustomField>
        <fullName>SortConcat__c</fullName>
        <formula>SBQQ__Schedule__r.SBQQ__Product__r.Name + TEXT(SBQQ__Number__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SortConcat</label>
        <type>Text</type>
    </CustomField>