force-app/main/default/objects/SBQQ__DiscountTier__c/fields/Transactional_Tier__c.field-meta.xml
<CustomField>
        <fullName>Transactional_Tier__c</fullName>
        <formula>SBQQ__Schedule__r.Transactional_Tier__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Transactional Tier</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </CustomField>