force-app/main/default/objects/SBQQ__DiscountTier__c/fields/Unit_Price__c.field-meta.xml
<CustomField>
        <fullName>Unit_Price__c</fullName>
        <description>Unit Price of the tier. Takes the List Price * the Discount %.</description>
        <formula>SBQQ__Schedule__r.List_Price__c * (1 - SBQQ__Discount__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Unit Price of the tier. Takes the List Price * the Discount %.</inlineHelpText>
        <label>Unit Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </CustomField>